--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       <button class="increment-btn" onclick="increment()">Increment</button>
       <button class="decrement-btn" onclick="decrement()">Decrement</button>
       <button class="save-btn" onclick="save()">Save</button>
+      <button class="reset-btn" onclick="reset()">Reset</button>
     </div>
-
+    <p id="save-el">Previous Entries: </p>
     <script src="index.js"></script>
   </body>
 </html>
